utils: Avoid X dependency in the nautilus extension

https://bugzilla.gnome.org/show_bug.cgi?id=705659